--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,9 @@
     <connection>scm:git:git@github.com:fuhsaz/JahiaCarousel.git</connection>
     <developerConnection>scm:git:git@github.com:fuhsaz/JahiaCarousel.git</developerConnection>
   </scm>
+  <properties>
+    <jahia-depends>bootstrap3-components,bootstrap3-core,default</jahia-depends>
+  </properties>
   <repositories>
     <repository>
       <releases>
@@ -83,9 +86,7 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <extensions>true</extensions>
         <configuration>
-          <instructions>
-            <Jahia-Depends>default</Jahia-Depends>
-          </instructions>
+          <instructions />
         </configuration>
       </plugin>
     </plugins>
